--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "dotenv": "^16.0.3",
     "mysql": "^2.18.1",
     "mysql-async-simple": "^1.0.3",
     "promise-mysql": "^5.2.0"
